--- a/index.html
+++ b/index.html
@@ -48,83 +48,102 @@
     </section>
 
     <section class="bout-me">
-        <div class="row">
-            <div class="col-lg-6">
-                <article class="text">
-                    <h2 class="hover-letras">Sobre o Dev</h2>
-                    <p class="about">Fala Jovem!! Prazer, me chamo Eder Jr. Sou um jovem sonhador, curioso e
-                        corajoso.
-                    </p>
-                    <ul class="text-white">
-                        <li>Aluno na Unifacef</li>
-                        <li>Cursando Engenharia de Software</li>
-                        <li>estagiário no Grupo Ib</li>
-                        <li>Futuro Front-end</li>
-                    </ul>
-                </article>
-
-                <aside class="techs">
-                    <h2 class="hover-letras pb-3">Tecnologias q o dev manja</h2>
-                    <p class="about">Já estudei algumas linguagens de programação, e busco me especializar cada vez
-                        mais!
-                        Confesso que o javaScript me agrada bastante kakaka
-                    </p>
-                    <div class="marquee">
-                        <ul class="marquee-content">
-                            <li><i class="fab fa-github"></i></li>
-                            <li><i class="fab fa-html5"></i></li>
-                            <li><i class="fab fa-js"></i></li>
-                            <li><i class="fab fa-css3"></i></li>
-                            <li><i class="fab fa-react"></i></li>
-                            <li><i class="fab fa-python"></i></li>
-                            <li><i class="fab fa-php"></i></li>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <article class="text">
+                        <h2 class="hover-letras">Sobre o Dev</h2>
+                        <p class="about">Fala Jovem!! Prazer, me chamo Eder Jr. Sou um jovem sonhador, curioso e
+                            corajoso.
+                        </p>
+                        <ul class="text-white">
+                            <li class="about">Aluno na Unifacef</li>
+                            <li class="about">Cursando Engenharia de Software</li>
+                            <li class="about">Desenvolvedor Júnior no Grupo Ib</li>
                         </ul>
-                    </div>
-                </aside>
-            </div>
+                    </article>
 
-            <div class="col-lg-6 text-end">
-                <figure>
-                    <div class="container">
-                        <div class="teste"></div>
-                        <figcaption class="pt-3">Eder Junior</figcaption>
-                    </div>
-                </figure>
+                    <aside class="techs">
+                        <h2 class="hover-letras pb-3">Tecnologias q o dev manja</h2>
+                        <p class="about">Já estudei algumas linguagens de programação, e busco me especializar cada vez
+                            mais!
+                            Confesso que o javaScript me agrada bastante kakaka
+                        </p>
+                        <div class="marquee">
+                            <ul class="marquee-content">
+                                <li><i class="fab fa-github"></i></li>
+                                <li><i class="fab fa-html5"></i></li>
+                                <li><i class="fab fa-js"></i></li>
+                                <li><i class="fab fa-css3"></i></li>
+                                <li><i class="fab fa-react"></i></li>
+                                <li><i class="fab fa-python"></i></li>
+                                <li><i class="fab fa-php"></i></li>
+                            </ul>
+                        </div>
+                    </aside>
+                </div>
+
+                <div class="col-lg-6 pt-3 text-end">
+                    <figure>
+                        <div class="container">
+                            <div class="teste"></div>
+                            <figcaption class="pt-3">Eder Junior</figcaption>
+                        </div>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2 class="purple pb-3">Projetos realizados</h2>
+                    <p class="about">Como um bom estudante, já realizei o NLw, que são projetos realizados pela
+                        Rocketseat.
+                        Gosto de criar sites, fazer animações com Scss, e executar ideias criativas!
+                    </p>
+                </div>
+                <div class="col-lg-8">
+                    <video src="./img/projeto.mp4" class="video" autoplay loop></video>
+                </div>
             </div>
         </div>
     </section>
 
     <section class="bout-me">
-        <div class="row">
-            <div class="col-lg-6">
-                <figure>
-                    <div class="container">
-                        <div class="lol"></div>
-                        <figcaption class="pt-3">League of Legends</figcaption>
-                    </div>
-                </figure>
-            </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <figure>
+                        <div class="container">
+                            <div class="lol"></div>
+                            <figcaption class="pt-3">League of Legends</figcaption>
+                        </div>
+                    </figure>
+                </div>
 
-            <div class="col-lg-6">
-                <article class="text">
-                    <h2 class="hover-letras-green">Let's Play ?</h2>
-                    <p class="about text-white">
-                        Nas horas vagas por que não jogar uma Liga das lendas não é mesmo!
-                    </p>
-                </article>
-                <aside class="techs">
-                    <h2 class="hover-letras-green pb-3">Me add lá</h2>
-                    <p class="about text-white">
-                        Sempre gostei de jogos de estratégia e em grupo, e o Lol tem bastante disso
-                        Claro que tem partidas que a Akali tem de fazer milagres...(quem não se garante com
-                        o seu main é louco kkkkkkkkk)
-                    </p>
-                </aside>
-                <iframe style="border-radius: 15px;" width="560" height="315"
-                    src="https://www.youtube.com/embed/HGPoGtSBhu0?controls=0" title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <div class="col-lg-6">
+                    <article class="text">
+                        <h2 class="hover-letras-green">Let's Play ?</h2>
+                        <p class="about text-white">
+                            Nas horas vagas por que não jogar uma Liga das lendas não é mesmo!
+                        </p>
+                    </article>
+                    <aside class="techs">
+                        <h2 class="hover-letras-green pb-3">Me add lá</h2>
+                        <p class="about text-white">
+                            Sempre gostei de jogos de estratégia e em grupo, e o Lol tem bastante disso
+                            Claro que tem partidas que a Akali tem de fazer milagres...(quem não se garante com
+                            o seu main é louco kkkkkkkkk)
+                        </p>
+                    </aside>
+                    <iframe class="frame" src="https://www.youtube.com/embed/HGPoGtSBhu0?controls=0"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </section>
@@ -139,7 +158,5 @@
     <!-- ACTIONS -->
     <script src="js/actions.js"></script>
 </body>
-
-
 
 </html>
