--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <a class="navbar-brand hover-letras text-white" href="#">
                 Eder junior
             </a>
-            <a href="https:/github.com" target="_blank">
+            <a href="https://github.com/yatocham" target="_blank">
                 <i class="fa-brands fa-github"></i>
             </a>
 
-            <a href="https:/linkedin.com" target="_blank">
+            <a href="https://www.linkedin.com/in/eder-junior-72b350168/" target="_blank">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
 
-            <a href="https:/intagram.com" target="_blank">
+            <a href="https://www.instagram.com/ederjuninho_/" target="_blank">
                 <i class="fa-brands fa-instagram"></i>
             </a>
         </nav>
@@ -67,7 +67,7 @@
                         <h2 class="hover-letras pb-3">Tecnologias q o dev manja</h2>
                         <p class="about">Já estudei algumas linguagens de programação, e busco me especializar cada vez
                             mais!
-                            Confesso que o javaScript me agrada bastante kakaka
+                            Confesso que o javaScript me diverte bastante kakaka
                         </p>
                         <div class="marquee">
                             <ul class="marquee-content">
@@ -87,7 +87,7 @@
                     <figure>
                         <div class="container">
                             <div class="teste"></div>
-                            <figcaption class="pt-3">Eder Junior</figcaption>
+                            <figcaption class="pt-3">Developer</figcaption>
                         </div>
                     </figure>
                 </div>
@@ -100,9 +100,9 @@
             <div class="row">
                 <div class="col-lg-4">
                     <h2 class="purple pb-3">Projetos realizados</h2>
-                    <p class="about">Como um bom estudante, já realizei o NLw, que são projetos realizados pela
+                    <p class="about">Como um bom estudante, já realizei o NLW, que são projetos realizados pela
                         Rocketseat.
-                        Gosto de criar sites, fazer animações com Scss, e executar ideias criativas!
+                        Gosto de criar sites, fazer animações com Css e Scss, e executar ideias criativas!
                     </p>
                 </div>
                 <div class="col-lg-8">
@@ -128,21 +128,79 @@
                     <article class="text">
                         <h2 class="hover-letras-green">Let's Play ?</h2>
                         <p class="about text-white">
-                            Nas horas vagas por que não jogar uma Liga das lendas não é mesmo!
+                            Nas horas vagas o lolzin chora!
                         </p>
                     </article>
                     <aside class="techs">
                         <h2 class="hover-letras-green pb-3">Me add lá</h2>
                         <p class="about text-white">
                             Sempre gostei de jogos de estratégia e em grupo, e o Lol tem bastante disso
-                            Claro que tem partidas que a Akali tem de fazer milagres...(quem não se garante com
-                            o seu main é louco kkkkkkkkk)
+                            Claro que tem partidas que a Akali tem de fazer milagres...dizem que eu sou ruim, mas
+                            isso ai é só detalhe(risos).
                         </p>
                     </aside>
                     <iframe class="frame" src="https://www.youtube.com/embed/HGPoGtSBhu0?controls=0"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="bout-me">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <article class="text-center">
+                        <h2 class="hover-letras-red">Muito Obrigado!</h2>
+                        <p class="about text-white">
+                            Obrigado por ter visitado meu projeto, e por ter conhecido um pouquinho sobre mim.
+                        </p>
+                    </article>
+                    <div class="section-div text-center">
+                        <div>
+                            <h2 class="hover-letras-red">Inspirações</h2>
+                            <p class="about text-white">Aqui estão algumas pessoas que me ajudaram no começo de tudo,
+                                obrigado por me
+                                fazerem amar essa profissão.
+                            </p>
+                            <!-- list -->
+                            <ul class="channel-list">
+                                <!-- item -->
+                                <li>
+                                    <a target="_blank" href="https://www.linkedin.com/in/fernando-fafilho/">
+                                        <img src="https://media.licdn.com/dms/image/C4E03AQGMWlqTN6Su5Q/profile-displayphoto-shrink_200_200/0/1615214754293?e=1678924800&v=beta&t=wEQ1mx9vI-LkLHN8ismiNYbc16iSK1_ThXEzZ-zZtiU"
+                                            alt="imagem">
+                                    </a>
+                                </li>
+                                <!-- *item -->
+                                <!-- item -->
+                                <li>
+                                    <a target="_blank" href="https://www.linkedin.com/in/laura-grassi/">
+                                        <img src="https://static-cdn.jtvnw.net/jtv_user_pictures/b00984ae-762b-44a0-b910-b5615992d39a-profile_image-150x150.png"
+                                            alt="Imagem">
+                                    </a>
+                                </li>
+                                <!-- *item -->
+                                <!-- item -->
+                                <li>
+                                    <a target="_blank" href="https://www.linkedin.com/company/filipe-deschamps/">
+                                        <img src="https://media.licdn.com/dms/image/C4D0BAQHSLqrrC1FghQ/company-logo_200_200/0/1583195093895?e=1681344000&v=beta&t=84TcMX7xYc185qUFyeShbOGq6wAixC7cqi6qp90_Kcw"
+                                            alt="Imagem">
+                                    </a>
+                                </li>
+                                <!-- *item -->
+                                <!-- item -->
+                                <li>
+                                    <a target="_blank" href="https://www.linkedin.com/in/gabrielfroes/">
+                                        <img src="./img/cod-fonte.jpg" alt="Imagem">
+                                    </a>
+                                </li>
+                                <!-- *item -->
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -158,5 +216,7 @@
     <!-- ACTIONS -->
     <script src="js/actions.js"></script>
 </body>
+
+
 
 </html>
