--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                     </p>
                 </div>
                 <div class="col-lg-8">
-                    <video src="./img/projeto.mp4" class="video" autoplay loop></video>
+                    <video type="video/mp4" class="video" autoplay  playsinline muted loop >
+                        <source src="./img/projeto.mp4" > 
+                    </video>
                 </div>
             </div>
         </div>
